test/expected/dynamic_cast_pc-c.out
dynamic cast x into pointer to class C
                               ^
32: error: "class": unsupported type in C
